# axum-htmx-distilled-boilerplate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
config/: app.toml
migrations/: 001_create_items.sql
src/: config.rs  db.rs  error.rs  lib.rs  render.rs
src/handlers/: mod.rs  partials.rs  templates.rs
src/handlers/api/: health.rs
src/middleware/: mod.rs
src/models/: mod.rs
src/services/: csrf.rs  health.rs  items.rs  mod.rs  session.rs
src/utils/: logging.rs  mod.rs  templates.rs
static/css/: app.css
static/js/: app.js
templates/: base.html
templates/components/: _tokens.html
templates/pages/: about.html  demo.html  home.html
templates/partials/: item_list.html  status_card.html
