[package]
name = "axum-htmx-app"
version = "0.1.0"
edition = "2021"
description = "Hardened Axum + HTMX full-stack web application — no API, no external dependencies"
license = "MIT"

[lib]
name = "app"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/bin/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["tokio"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs"] }

# Serialization (minimal — debug-mode templates only)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
toml = "0.8"

# Templating: askama (compiled, release) + minijinja (hot-reload, dev)
askama = "0.12"
askama_axum = "0.4"
minijinja = { version = "2.0", features = ["loader"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Security
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
html-escape = "0.2"

# Optional: Database (enable with --features database)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"], optional = true }

[features]
default = []
database = ["sqlx"]

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.dev]
opt-level = 0
debug = true
